--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /AdventOfCode/.vs/AdventOfCode
 /AdventOfCode/AdventOfCode/obj
 /AdventOfCode/AdventOfCode/bin/Debug/net6.0
+/AdventOfCode/AdventOfCode_Day2/bin/Debug/net6.0
+/AdventOfCode/AdventOfCode_Day2/obj
