day 3 part 1 completed

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /AdventOfCode/AdventOfCode/bin/Debug/net6.0
 /AdventOfCode/AdventOfCode_Day2/bin/Debug/net6.0
 /AdventOfCode/AdventOfCode_Day2/obj
+/AdventOfCode/.vs/ProjectEvaluation
+/AdventOfCode/AdventOfCode_Day3/bin/Debug/net6.0
+/AdventOfCode/AdventOfCode_Day3/obj
